examples/puller/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
spec:
  rules:
  - host: nginx-beta.k8s.pipal.in
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
        path: /
